editing volunteer.hbs into stategovtcontact

--- a/ndapp/views/volunteer.hbs
+++ b/ndapp/views/volunteer.hbs
@@ -1,2 +1,75 @@
-<h1>{{title}}</h1>
-<p> {{title}}</p>
+  <div class="wrapper">
+        
+        <section id="screens">
+            <div class="container">
+
+                <div class="section-heading scrollpoint sp-effect3">
+                    <h1>Be Heard</h1>
+                    <div class="divider"></div>
+                    <p>Contact your local, county, or state officials and start the conversation:</p>
+                </div>
+
+                <div class="filter scrollpoint sp-effect3">
+                    <a href="javascript:void(0)" class="button js-filter-all active">Local Representatives</a>
+                    
+                    <a href="javascript:void(0)" class="button js-filter-one">Local Government</a>
+                    
+                    <a href="javascript:void(0)" class="button js-filter-two">County Government</a>
+                    
+                    <a href="javascript:void(0)" class="button js-filter-three">State Government</a>
+                
+                </div>
+                
+            </div> 
+        </section>
+        
+        <div class="container">
+            <h2></h2>
+            <p></p>            
+            <table class="table table-hover">
+                <thead>
+                <tr>
+                    <th>Firstname</th>
+                    <th>Lastname</th>
+                    <th>Email</th>
+                </tr>
+                </thead>
+                    <tbody>
+                    <tr>
+                        <td>John</td>
+                        <td>Doe</td>
+                        <td>john@example.com</td>
+                    </tr>
+                    <tr>
+                        <td>Mary</td>
+                        <td>Moe</td>
+                        <td>mary@example.com</td>
+                    </tr>
+                    <tr>
+                        <td>July</td>
+                        <td>Dooley</td>
+                        <td>july@example.com</td>
+                    </tr>
+                    </tbody>
+            </table>
+        </div>
+        
+        
+        
+        
+        <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+            <div class="panel panel-default">
+                <div class="panel-heading" role="tab" id="headingOne">
+                <h4 class="panel-title">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    Neighborhood Cleanup
+                    </a>
+                </h4>
+                </div>
+                <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+                <div class="panel-body">
+                derson sciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                </div>
+                </div>
+            </div>
+        </div>
