--- a/ndapp/views/volunteer.hbs
+++ b/ndapp/views/volunteer.hbs
@@ -1,61 +1,22 @@
   <div class="wrapper">
-        
-        <section id="screens">
+           <section id="screens">
             <div class="container">
 
                 <div class="section-heading scrollpoint sp-effect3">
-                    <h1>Be Heard</h1>
+                    <h1>Join a Team Today</h1>
                     <div class="divider"></div>
-                    <p>Contact your local, county, or state officials and start the conversation:</p>
+                    <p>See how you can contribute</p>
                 </div>
 
                 <div class="filter scrollpoint sp-effect3">
-                    <a href="javascript:void(0)" class="button js-filter-all active">Local Representatives</a>
-                    
-                    <a href="javascript:void(0)" class="button js-filter-one">Local Government</a>
-                    
-                    <a href="javascript:void(0)" class="button js-filter-two">County Government</a>
-                    
-                    <a href="javascript:void(0)" class="button js-filter-three">State Government</a>
-                
+                    <a href="javascript:void(0)" class="button js-filter-all active">All Screens</a>
+                    <a href="javascript:void(0)" class="button js-filter-one">User Access</a>
+                    <a href="javascript:void(0)" class="button js-filter-two">Social Network</a>
+                    <a href="javascript:void(0)" class="button js-filter-three">Media Players</a>
                 </div>
                 
-            </div> 
+            </div>
         </section>
-        
-        <div class="container">
-            <h2></h2>
-            <p></p>            
-            <table class="table table-hover">
-                <thead>
-                <tr>
-                    <th>Firstname</th>
-                    <th>Lastname</th>
-                    <th>Email</th>
-                </tr>
-                </thead>
-                    <tbody>
-                    <tr>
-                        <td>John</td>
-                        <td>Doe</td>
-                        <td>john@example.com</td>
-                    </tr>
-                    <tr>
-                        <td>Mary</td>
-                        <td>Moe</td>
-                        <td>mary@example.com</td>
-                    </tr>
-                    <tr>
-                        <td>July</td>
-                        <td>Dooley</td>
-                        <td>july@example.com</td>
-                    </tr>
-                    </tbody>
-            </table>
-        </div>
-        
-        
-        
         
         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
             <div class="panel panel-default">
@@ -73,3 +34,4 @@
                 </div>
             </div>
         </div>
+            
