edited organize.hbs to include govtinfo

--- a/ndapp/views/organize.hbs
+++ b/ndapp/views/organize.hbs
@@ -1,45 +1,44 @@
- <div class="wrapper">
-           <section id="screens">
-            <div class="container">
 
-                <div class="section-heading scrollpoint sp-effect3">
-                    <h1>Be Heard</h1>
-                    <div class="divider"></div>
-                    <p>Get in contact with your local, county, or state governments to the convertation</p>
-                </div>
-            </div>
-        </section>
     
+        <section id="screens">
+            
+            <div class="section-heading scrollpoint sp-effect3">
+                <h1>Reach Out</h1>
+                <div class="divider"></div>
+                <p>Get in contact with your local, county, or state governments to start the convertation</p>
+            </div>
+            
             <div class="container">
-                <h2>Your Governments</h2>
-                <p>Use the information below to reach out to your representatives:</p>            
+                <h2>Be Heard</h2>
+                <p>Use the links below to reach out to your representatives:</p>            
                     <table class="table table-hover">
                         <thead>
                         <tr>
                             <th>Type</th>
                             <th>Department</th>
-                            <th>Email</th>
+                            <th>Reach Out</th>
                         </tr>
                         </thead>
                         <tbody>
                         <tr>
-                            <td>John</td>
-                            <td>Doe</td>
-                            <td>local@example.com</td>
+                            <td>City of Wilmington</td>
+                            <td>Mayor's Office of Constituent Services</td>
+                            <td>cityhelp@WilmingtonDE.gov</td>
                         </tr>
                         <tr>
-                            <td>Mary</td>
-                            <td>Moe</td>
-                            <td>county@example.com</td>
+                            <td>New Castle County</td>
+                            <td>Office of Human Resources</td>
+                            <td>Ph: 302-395-5180</td>
                         </tr>
                         <tr>
-                            <td>July</td>
-                            <td>Dooley</td>
-                            <td>state@example.com</td>
+                            <td>The State of Delaware</td>
+                            <td>Division of Human Relations</td>
+                            <td>(877) 54-HUMAN (544-8626) (Toll Free)</td>
                         </tr>
                         </tbody>
                     </table>
             </div>
-                
+       </section>
+    
             
         
