--- a/ndapp/views/layout.hbs
+++ b/ndapp/views/layout.hbs
@@ -56,13 +56,13 @@
 
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a href="campaign.html">Start Local Campaign</a>
+                            <li><a href="/campaign">Start Local Campaign</a>
                             </li>
-                            <li><a href="Volunteer.html">Volunteer</a>
+                            <li><a href="/volunteer">Volunteer</a>
                             </li>
-                            <li><a href="Donate.html">Donate</a>
+                            <li><a href="/donate">Donate</a>
                             </li>
-                            <li><a href="Organize.html">Organize</a>
+                            <li><a href="/organize">Organize</a>
                             </li>
                         </ul>
 
